<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".New">

    <LinearLayout
            android:padding="32dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <RadioButton
                    android:text="@string/eg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/radioButton"
                    android:checked="true"
                    android:layout_weight="1"/>
            <RadioButton
                    android:text="@string/ing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/radioButton2"
                    android:layout_weight="1"/>
            <RadioButton
                    android:text="@string/sueldo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton3"
                    android:layout_weight="1"/>
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="32dp"
                android:layout_marginBottom="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/desc"
                    android:inputType="textCapSentences"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/price"
                    android:inputType="numberSigned"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/btn_save"
                android:layout_gravity="end|bottom"
                android:layout_marginTop="32dp"
                android:padding="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@color/colorWithe"
                android:text="@string/save"/>

    </LinearLayout>

</ScrollView>